# jpireader

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.antigravitycli/: c343fa4e-c209-4dee-ab43-c7e82e18a551.json
src/: bit_set.cpp  bit_set.h  csv_writer.cpp  csv_writer.h  data_record_parser.cpp  data_record_parser.h  flight_parser.cpp  flight_parser.h  jpi_decoder.cpp  jpi_decoder.h  jpi_stream.cpp  jpi_stream.h  jpi_types.h  metadata_parser.cpp  metadata_parser.h  metadata_util.cpp  metadata_util.h  metric.h  metric_id.h  metrics.cpp  metrics.h  record_updater.cpp  record_updater.h  sensor_parser.cpp  sensor_parser.h
src/.antigravity/: settings.json
testdata/: Flt141.csv  Flt158.csv  Flt45.csv  Flt72.csv  U260523.JPI
tests/: integration_test.cpp  unit_test.cpp
